[gd_scene load_steps=6 format=3 uid="uid://d4jv5xkb7a1m8"]

[ext_resource type="Script" path="res://modules/title_screen/title_screen.gd" id="1_h5krl"]
[ext_resource type="Texture2D" uid="uid://5am0arvmxore" path="res://assets/factorygame3.png" id="2_b0chy"]
[ext_resource type="Theme" uid="uid://b4us1mhl0qxjp" path="res://assets/theme.tres" id="3_gol26"]
[ext_resource type="PackedScene" uid="uid://k40wfhx7mcyc" path="res://modules/level_selector/level_selector.tscn" id="4_wkuil"]
[ext_resource type="PackedScene" uid="uid://n1w8kvpbdvrq" path="res://modules/level_creator/level_creator.tscn" id="5_vh5r2"]

[node name="TitleScreen" type="Control" node_paths=PackedStringArray("window", "level_selector", "level_creator", "background")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h5krl")
window = NodePath("Window")
level_selector = NodePath("CanvasLayer/LevelSelector")
level_creator = NodePath("CanvasLayer/LevelCreator")
background = NodePath("CanvasLayer/ColorRect")

[node name="Window" type="Window" parent="."]
title = "thing"
initial_position = 2
size = Vector2i(256, 256)
visible = false
transient = true
unresizable = true
borderless = true
mouse_passthrough = true

[node name="Camera2D" type="Camera2D" parent="Window"]
anchor_mode = 0

[node name="TextureRect" type="TextureRect" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_b0chy")
expand_mode = 2
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="Window"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Window/CenterContainer"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_b0chy")
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_gol26")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center]FACTORY GAME"
scroll_active = false

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Load" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme = ExtResource("3_gol26")
text = "Load Game"

[node name="New" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme = ExtResource("3_gol26")
text = "New Game"

[node name="Options" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme = ExtResource("3_gol26")
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme = ExtResource("3_gol26")
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.141176, 0.164706, 1)

[node name="LevelSelector" parent="CanvasLayer" instance=ExtResource("4_wkuil")]
visible = false

[node name="LevelCreator" parent="CanvasLayer" instance=ExtResource("5_vh5r2")]
visible = false

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="VBoxContainer2/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer2/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="VBoxContainer2/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
